Fixed websocket not working, now able to create chat and send messages
